// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessor accessor can be generated from store object 1`] = `
{
  "initialiseStore": [Function],
  "resetEmail": [Function],
  "resetEmailWithOptionalPayload": [Function],
  "setEmail": [Function],
  "submodule": {
    "initialise": [Function],
    "nestedSubmodule": {
      "initialise": [Function],
      "setFirstName": [Function],
      "setLastName": [Function],
      "setName": [Function],
    },
    "setFirstName": [Function],
    "setLastName": [Function],
    "setName": [Function],
  },
}
`;

exports[`accessor accessor object exists 1`] = `
{
  "initialiseStore": [Function],
  "resetEmail": [Function],
  "resetEmailWithOptionalPayload": [Function],
  "setEmail": [Function],
  "submodule": {
    "initialise": [Function],
    "nestedSubmodule": {
      "initialise": [Function],
      "setFirstName": [Function],
      "setLastName": [Function],
      "setName": [Function],
    },
    "setFirstName": [Function],
    "setLastName": [Function],
    "setName": [Function],
  },
}
`;

exports[`accessor accessor works with state object 1`] = `""`;

exports[`accessor accessor works with state object 2`] = `"test1@email.com"`;

exports[`accessor store exists 1`] = `
{
  "actions": {
    "resetEmail": [Function],
    "resetEmailWithOptionalPayload": [Function],
  },
  "getters": {
    "email": [Function],
    "fullEmail": [Function],
  },
  "modules": {
    "submodule": {
      "actions": {
        "initialise": [Function],
        "setName": [Function],
      },
      "getters": {
        "fullName": [Function],
      },
      "modules": {
        "nestedSubmodule": {
          "actions": {
            "initialise": [Function],
            "setName": [Function],
          },
          "getters": {
            "fullName": [Function],
          },
          "mutations": {
            "setFirstName": [Function],
            "setLastName": [Function],
          },
          "namespaced": true,
          "state": [Function],
        },
      },
      "mutations": {
        "setFirstName": [Function],
        "setLastName": [Function],
      },
      "namespaced": true,
      "state": [Function],
    },
  },
  "mutations": {
    "initialiseStore": [Function],
    "setEmail": [Function],
  },
  "state": [Function],
}
`;
